// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Equation Functions - Bar Bottom Comment 1`] = `
[
  0.7,
  0,
  0,
  0,
  0,
  0.7,
  0,
  0,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Bar Bottom Comment 2`] = `
[
  0.07,
  0,
  0,
  0,
  0,
  0.01,
  0,
  -0.0366,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Bar Top Comment 1`] = `
[
  0.7,
  0,
  0,
  0,
  0,
  0.7,
  0,
  0,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Bar Top Comment 2`] = `
[
  0.42,
  0,
  0,
  0.014,
  0,
  0.42,
  0,
  0.13236,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Bar Top Comment 3`] = `
[
  0.07,
  0,
  0,
  0,
  0,
  0.01,
  0,
  0.098,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;
